# lawrencegranda.github.io

./: .gitignore  .markdownlint.json  .prettierrc.json  .yamllint.yaml  CNAME  Gemfile  README.md  _config.yml  format.sh  index.html  package.json  pyproject.toml
.github/workflows/: pages-deploy.yml
_data/: contact.yml  share.yml
_data/about/: certifications.yml  education.yml  experience.yml  projects.yml  skills.yml
_data/resume/: certifications.yml  education.yml  experience.yml  projects.yml
_includes/: head.html
_layouts/: about.html
_posts/: 2024-03-07-introduction.md  2024-03-07-welcome-to-my-blog.md  2025-03-08-introduction.md  2025-03-19-intro-to-cs.md  2025-03-21-intro-to-cs.md
_tabs/: about.html  about.md  posts.md  resume.html
assets/css/: about.css  base.css  custom.css  index.css
assets/js/: about.js  custom.js  index.js
